--- a/clients.html
+++ b/clients.html
@@ -19,9 +19,9 @@
   --bg:#0b0b0f;
   --card:#16161d;
   --accent:#7aa2ff;
+  --hover: #5a7cff;
   --text:#ffffff;
   --muted:#9a9aab;
-  --hover: #5a7cff;
 }
 *{box-sizing:border-box;margin:0;padding:0;font-family:Inter,Arial,sans-serif;}
 body{background:radial-gradient(circle at top,#1b1b2f,var(--bg));color:var(--text);line-height:1.6;}
@@ -43,6 +43,8 @@ h2{text-align:center;font-size:32px;margin-bottom:20px;}
 .card li{margin-bottom:10px;color:#cfcfcf;}
 .btn{display:block;text-align:center;padding:14px;border-radius:14px;background:linear-gradient(135deg,var(--accent),var(--hover));color:#fff;text-decoration:none;font-weight:600;transition:.25s, box-shadow .25s;}
 .btn:hover{transform:scale(1.07);box-shadow:0 8px 22px rgba(114,144,255,.5);}
+.btn-email{background:#0076ff;color:#fff;text-decoration:none;padding:14px;border-radius:14px;font-weight:600;transition:.3s;box-shadow:0 8px 25px rgba(0,118,255,.45);}
+.btn-email:hover{background:#005adf;transform:scale(1.07);box-shadow:0 10px 28px rgba(0,90,223,.55);}
 .contact-info{text-align:center;margin-top:40px;color:var(--muted);line-height:1.5;}
 .popup{position:fixed;inset:0;background:rgba(0,0,0,.7);display:none;justify-content:center;align-items:center;}
 .popup.active{display:flex;}
@@ -104,12 +106,71 @@ h2{text-align:center;font-size:32px;margin-bottom:20px;}
   <div class="contact-info">
     <p>Адрес: Беларусь, г. Минск, Аранская, 8</p>
     <p>Время работы: 9:00 — 18:00, без выходных</p>
-    <p>Email: solarionmedia@gmail.com | Тел.: +375 29 690-92-00</p>
+    <p>Email: <a href="#" class="btn-email" onclick="openPopup('Email')">Email</a> | Тел.: +375 29 690-92-00</p>
   </div>
 </section>
 
 <footer>© 2025 Solarion.Media</footer>
 
-<div class="popup" id
+<div class="popup" id="popup">
+  <div class="popup-content">
+    <h3 id="popupTitle">Заявка</h3>
+    <form action="https://formspree.io/f/dc3459c3c7d84a90a5b95ca13dda63fe" method="POST">
+      <input type="email" name="email" placeholder="Ваш email" required>
+      <textarea name="message" placeholder="Опишите задачу" required></textarea>
+      <button class="btn-email" type="submit" id="popup-btn">Отправить</button>
+    </form>
+  </div>
+</div>
+
+<script>
+const langData={
+  ru:{title:'Solarion.Media',subtitle:'AI-студия, которая превращает контент, маркетинг и автоматизацию в поток заявок.',pricingTitle:'Тарифы и решения',pricingSub:'Прозрачные цены. Понятный результат. Мы не продаём часы — мы выстраиваем систему роста.',plan1:{name:'Старт',price:'1 350 BYN',features:['Анализ бизнеса и ниши','AI-стратегия роста','Контент-пак (офферы, тексты)','Рекомендации по заявкам'],btn:'Выбрать'},plan2:{name:'Рост',price:'3 750 BYN',features:['Всё из тарифа «Старт»','SMM и продвижение','Базовая AI-автоматизация','Настройка заявок'],btn:'Выбрать'},plan3:{name:'Премиум',price:'7 500 BYN',features:['Полный digital-пакет','AI-системы под бизнес','Аналитика и KPI','Оптимизация процессов'],btn:'Выбрать'},popupBtn:'Отправить'},
+  en:{title:'Solarion.Media',subtitle:'AI studio that turns content, marketing, and automation into a steady stream of leads.',pricingTitle:'Pricing & Solutions',pricingSub:'Transparent pricing. Clear results. We don’t sell hours — we build growth systems.',plan1:{name:'Starter',price:'$450',features:['Business analysis & niche research','AI growth strategy','Content package (texts, offers)','Lead generation recommendations'],btn:'Book a call'},plan2:{name:'Growth',price:'$1,250',features:['Everything in Starter','SMM & promotion strategy','Basic AI automation','Lead capture setup'],btn:'Book a call'},plan3:{name:'Premium',price:'$2,500',features:['Full digital package','AI systems tailored for your business','Analytics & KPI optimization','Process improvement'],btn:'Book a call'},popupBtn:'Email'}
+};
+
+function switchLang(lang){
+  document.getElementById('btn-ru').classList.toggle('active',lang==='ru');
+  document.getElementById('btn-en').classList.toggle('active',lang==='en');
+  const data=langData[lang];
+  document.getElementById('title').innerText=data.title;
+  document.getElementById('subtitle').innerText=data.subtitle;
+  document.getElementById('pricing-title').innerText=data.pricingTitle;
+  document.getElementById('pricing-sub').innerText=data.pricingSub;
+  document.getElementById('plan1-name').innerText=data.plan1.name;
+  document.getElementById('plan1-price').innerText=data.plan1.price;
+  document.getElementById('plan1-features').innerHTML=data.plan1.features.map(f=>' <li>'+f+'</li>').join('');
+  document.getElementById('plan1-btn').innerText=data.plan1.btn;
+  document.getElementById('plan2-name').innerText=data.plan2.name;
+  document.getElementById('plan2-price').innerText=data.plan2.price;
+  document.getElementById('plan2-features').innerHTML=data.plan2.features.map(f=>' <li>'+f+'</li>').join('');
+  document.getElementById('plan2-btn').innerText=data.plan2.btn;
+  document.getElementById('plan3-name').innerText=data.plan3.name;
+  document.getElementById('plan3-price').innerText=data.plan3.price;
+  document.getElementById('plan3-features').innerHTML=data.plan3.features.map(f=>' <li>'+f+'</li>').join('');
+  document.getElementById('plan3-btn').innerText=data.plan3.btn;
+  document.getElementById('popup-btn').innerText=data.popupBtn;
+}
+
+function openPopup(plan){
+  const lang=document.getElementById('btn-ru').classList.contains('active')?'ru':'en';
+  document.getElementById('popup').classList.add('active');
+  document.getElementById('popupTitle').innerText=lang==='ru'?'Заявка — тариф «'+plan+'»':'Booking Request — '+plan;
+}
+
+document.getElementById('popup').onclick=e=>{
+  if(e.target.id==='popup') e.target.classList.remove('active');
+};
+
+// Scroll animation
+const cardsContainer=document.getElementById('cards-container');
+window.addEventListener('scroll',()=>{
+  const rect=cardsContainer.getBoundingClientRect();
+  if(rect.top<window.innerHeight-100){cardsContainer.style.opacity=1;cardsContainer.style.transform='translateY(0)';}
+});
+</script>
+
+</body>
+</html>
 
 
